@@ -8,6 +8,7 @@ linux-base (4.6) UNRELEASED; urgency=medium
   * linux-check-removal: Assume we're in a container if
     /run/systemd/container exists
   * linux-check-removal: Work around debconf cache management bug (see #908001)
+  * Add unit tests for image_list() function used by linux-version
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 16 Aug 2017 16:22:12 +0100
 
